[package]
name = "ruttle"
version = "0.1.0"
authors = ["shohi <oshohi@gmail.com>"]

[lib]
name = "stllib"

[[bin]]
name = "ruttle"

[dependencies]
serde = "^1.0.70"
serde_derive = "^1.0.70"
serde_json = "^1.0.22"

toml = "^0.4.6"
try_opt = "^0.1.1"
regex = "^1.0.1"

rusoto_core = "^0.32.0"
rusoto_ec2 = "^0.32.0"
# rusoto_s3 = "^0.32.0"