[package]
name = "ruttle"
version = "0.1.0"
authors = ["shohi <oshohi@gmail.com>"]
edition = "2018"

[lib]
name = "stllib"

[[bin]]
name = "ruttle"

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"

toml = "0.5.0"
try_opt = "0.2.0"
regex = "1.1.6"

rusoto_core = "0.38.0"
rusoto_ec2 = "0.38.0"
rusoto_s3 = "0.38.0"
rusoto_credential = "0.17.0"

dirs = "1.0.5"
